# nvme-rag

./: .env.example  .gitignore  CLAUDE.md  CLI_DESIGN.md  CLI_IMPLEMENTATION_PLAN.md  CLI_PROGRESS_SUMMARY.md  DEPLOYMENT.md  DockerFile  MANIFEST.in  README.md  cli-tool-deployment.txt  docker-compose.yml  entrypoint.sh  how-to.txt  install.sh  performance-improvement.txt  project_report.tex  pyproject.toml  qlora-fine-tuning-plan.txt  requirements.txt  requirements_phase2.txt  run_full_RAG.py  run_retrieval_and_generation.py  setup.py  setup_nvme_rag.sh
.claude/: settings.local.json
data/embeddings_cache/: d736459a_embeddings.json
data/vector_store/3be74249-619f-4e79-90ab-d5ecf4a87175/: index_metadata.pickle
data/vector_store/4fd59999-3453-43b3-bb40-b154b5994db0/: index_metadata.pickle
misc/: debug_content_percentage.py  fix_percentage_calculation.py
nvme_rag/: __init__.py
nvme_rag/cli/: __init__.py  main.py
nvme_rag/cli/commands/: __init__.py  config.py  document.py  query.py  query_old.py  setup.py  system.py
nvme_rag/config/: __init__.py  manager.py  models.py
nvme_rag/core/: __init__.py
nvme_rag/core/data_processing/: document_processor.py  pdf_processor.py
nvme_rag/core/llm/: qa_pipeline.py  query_translator.py
nvme_rag/core/pipeline/: integration.py
nvme_rag/core/retrieval/: retrieval_pipeline.py
nvme_rag/core/vector_store/: base.py  chroma_store.py  embedding_generator.py
scripts/: build-package.sh  docker-deploy.sh  process_nvme_spec.py  setup_chromaDB_ollama.py  setup_phase2.py
scripts/data/processed/: 91cfd52ab0dc_chunks.json  91cfd52ab0dc_metadata.json  91cfd52ab0dc_stats.json
scripts/data/processed_backup/: 91cfd52ab0dc_chunks.json  91cfd52ab0dc_metadata.json  91cfd52ab0dc_stats.json
src/data_processing/: document_processor.py  semantic_chunker.py
src/llm/: answer_generator.py  ollama_client.py  qa_pipeline.py
src/pipeline/: integration.py
src/retrieval/: retrieval_pipeline.py
src/vector_store/: base.py  chroma_store.py  embedding_generator.py
tests/: run_phase2_tests.py  run_tests.py  test_chunking.py  test_content_matching.py  test_data_processing.py  test_full_rag.py  test_integration.py  test_llm_retrieval.py  test_qa_pipeline.py  test_retrieval_only.py  test_vector_store.py
tests/.claude/: settings.local.json
tests/data/embeddings_cache/: d736459a_embeddings.json
tests/data/vector_store/: chroma.sqlite3
